--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject",
-    "test": "jest --watchAll"
+    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
+    "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+    "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "eject": "NODE_OPTIONS=--openssl-legacy-provider expo eject",
+    "test": "NODE_OPTIONS=--openssl-legacy-provider jest --watchAll"
   },
   "jest": {
     "preset": "jest-expo"
